--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,5 +6,7 @@
     "typescript",
     "svelte"
   ],
-  "svelte.enable-ts-plugin": true
+
+  "tailwindCSS.enable": true,
+  "svelte.enable-ts-plugin": true 
 }
